--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta cha<html lang="en">
+rset="UTF-8">
   <title>CSS ISSUE BOT 9000</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
